# toptal/api/swagger/swagger.yaml
@@ -236,6 +236,10 @@ definitions:
         description: userId for owner
       name:
         type: string
+      description:
+        type: string
+      imageUrl:
+        type: string
   RestaurantGet:
     type: object
     properties:
